{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 60,
  "lineage": "cb17b10f-f37d-c2e8-f050-2b29d2185b0a",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "tf_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0e3e630cc7f76d6b6",
            "id": "rtb-0e3e630cc7f76d6b6",
            "owner_id": "405873723470",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "tf_private"
            },
            "vpc_id": "vpc-0700b02fd32b96865"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9089763828757e1",
            "arn": "arn:aws:ec2:us-east-1:405873723470:instance/i-04298161bc08a0a1b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04298161bc08a0a1b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-046444b63381e4c1a",
            "private_dns": "ip-10-123-1-206.ec2.internal",
            "private_ip": "10.123.1.206",
            "public_dns": "ec2-54-236-220-72.compute-1.amazonaws.com",
            "public_ip": "54.236.220.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:405873723470:key/539b3dc9-e905-4dd3-b04c-8511a6223a7b",
                "volume_id": "vol-00f5b2c40d3c64915",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ffe78b3654e84c8",
            "tags": {
              "Name": "tf_server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ca4b11a622e72a29"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.tf_auth",
            "module.networking.aws_security_group.tf_public_sg",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9089763828757e1",
            "arn": "arn:aws:ec2:us-east-1:405873723470:instance/i-094262c2539555207",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094262c2539555207",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4e6ca0a55358850",
            "private_dns": "ip-10-123-2-221.ec2.internal",
            "private_ip": "10.123.2.221",
            "public_dns": "ec2-34-235-147-189.compute-1.amazonaws.com",
            "public_ip": "34.235.147.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:405873723470:key/539b3dc9-e905-4dd3-b04c-8511a6223a7b",
                "volume_id": "vol-0e9e716d393f46bf2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045f315105dee05e0",
            "tags": {
              "Name": "tf_server-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ca4b11a622e72a29"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.tf_auth",
            "module.networking.aws_security_group.tf_public_sg",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405873723470:internet-gateway/igw-004bfc2a68c5426a9",
            "id": "igw-004bfc2a68c5426a9",
            "owner_id": "405873723470",
            "tags": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-0700b02fd32b96865"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03ccacfc7f30ae841",
            "owner_id": "405873723470",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004bfc2a68c5426a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public"
            },
            "vpc_id": "vpc-0700b02fd32b96865"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.tf_internet_gateway",
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4ab5de66847be7c",
            "route_table_id": "rtb-03ccacfc7f30ae841",
            "subnet_id": "subnet-08ffe78b3654e84c8"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.tf_internet_gateway",
            "module.networking.aws_route_table.tf_public_rt",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db314ecc5c11aec4",
            "route_table_id": "rtb-03ccacfc7f30ae841",
            "subnet_id": "subnet-045f315105dee05e0"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.tf_internet_gateway",
            "module.networking.aws_route_table.tf_public_rt",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405873723470:security-group/sg-0ca4b11a622e72a29",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca4b11a622e72a29",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_public_sg",
            "name_prefix": null,
            "owner_id": "405873723470",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0700b02fd32b96865"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405873723470:subnet/subnet-08ffe78b3654e84c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-08ffe78b3654e84c8",
            "map_public_ip_on_launch": true,
            "owner_id": "405873723470",
            "tags": {
              "Name": "tf_public_1"
            },
            "vpc_id": "vpc-0700b02fd32b96865"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405873723470:subnet/subnet-045f315105dee05e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-045f315105dee05e0",
            "map_public_ip_on_launch": true,
            "owner_id": "405873723470",
            "tags": {
              "Name": "tf_public_2"
            },
            "vpc_id": "vpc-0700b02fd32b96865"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405873723470:vpc/vpc-0700b02fd32b96865",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0b9b105e7857494a1",
            "default_route_table_id": "rtb-0e3e630cc7f76d6b6",
            "default_security_group_id": "sg-02fcaa37091461f6a",
            "dhcp_options_id": "dopt-093832f6f36258a3f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0700b02fd32b96865",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e3e630cc7f76d6b6",
            "owner_id": "405873723470",
            "tags": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}